--- a/css/styles.css
+++ b/css/styles.css
@@ -2185,12 +2185,15 @@ main .post-content .post-title a{
 
 .what-WE-DO .doing .doing-one .things p{
     margin-top: 1.5rem;
+    font-size: 17px;
+    color: #222;
+    font-weight: var(--fw-600);
 }
 
 .what-WE-DO .doing .doing-one .things i{
     cursor: pointer;
-    
-    border: 1.4px solid var(--winter-sky);
+    color: var(--chrome-yellow);
+    border: 1.4px solid var(--chrome-yellow);
     font-size: 40px;
     border-radius: 50%;
     padding: 0.9rem 1.4rem;
